# type-weather

./: .env  .gitignore  .prettierrc.yaml  README.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build-action.yml  sync-release-to-gitee.yml
keys/: myapp.key  myapp.key.pub
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_consts.rs  invoke_command.rs  lib.rs  main.rs  windows.rs
src/apis/amap/: AmapTypes.ts  AmapWebApis.ts  amap-type.ts  amap-web-api.ts
src/components/ui/: DropdownMenu.tsx  button.tsx  dropdown-menu.tsx  text.tsx
src/components/widget/: ErrorBoundary.tsx  IconPark.tsx
src/conponents/: ErrorBoundary.tsx  IconPark.tsx
src/constants/: AppConstants.ts  InvokeConstants.ts  RouterConstants.ts  TauriConstants.ts  app-constants.ts  router-constants.ts  tauri-constants.ts
src/contexts/: AppSystemOSInfoContext.tsx  AppSystemOSInfoProvider.tsx  AppSystemOSProvider.tsx  GeographicLocationContext.tsx  GeographicLocationProvider.tsx  ThemeProvider.tsx  WeatherContent.tsx  WeatherProvider.tsx
src/hooks/: useGeographicLocation.ts  useSystemOSInfo.ts  useWeather.ts
src/layouts/: AnimatedLayout.tsx  Main.Layout.tsx  MainLayout.tsx
src/lib/: dateTimeLib.ts
src/libs/: AutoCheckUpdateOSLib.ts  DateTimeLib.ts  OsLib.ts  PermissionAuthenticationLib.ts  WeatherLib.ts  dateTimeLib.ts  loggerLib.ts  osLib.ts  permission.ts  permissionAuthenticationLib.ts  permissionLib.ts  storage.ts  storageLib.ts  template-utils.ts  typeScriptLib.ts  windowsLib.ts
src/network/: RequestConfig.ts  ResponseInterceptors.ts  request-config.ts  request-interceptors.ts  response-interceptors.ts
src/pages/: 404NotFoundPage.tsx  HomePage.tsx  SystemSettingPage.tsx
src/pages/weather/: WeatherHomePage.tsx
src/pages/weather/other/: TodayWeatherCard.tsx  TodayWeatherMood.tsx  WeatherCardContainer.tsx  WeatherLogo.tsx  WeatherSearchDetailPage.tsx  WeatherSearchInput.tsx
src/routers/: RouteLoading.tsx  RouterConfig.tsx  RouterLazyLoad.tsx  RouterPermission.tsx
src/stores/: GeographicLocationStore.ts  SystemConfigStore.ts  WeatherStore.ts
src/styles/: App.css
