[package]
name = "qing_glass"
version = "1.0.0"
description = "把天气画在桌面这块画布上，让每一天都有独一无二的风景。"
authors = ["songmm"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "qing_glass_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2"
tauri-plugin-single-instance = "2.3.2"
tauri-plugin-persisted-scope = "2.3.1"
tauri-plugin-store = "2.3.0"
tauri-plugin-updater = "2.9.0"
tauri-plugin-fs = "2.4.1"
tauri-plugin-process = "2.3.0"
tauri-plugin-dialog = "2.3.2"
